Sistemate traduzioni, sistemati codici tui colori.